[package]
name = "mandelbrot-rs"
version = "0.1.0"
authors = ["Robert Serrano Kobylyansky <sk.robchik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"
pixels = "0.2"
winit = "0.22.0"
winit_input_helper = "0.6.0"
num-complex = "0.3.1"
rayon = "1.5.0"
